@@ -91,4 +91,5 @@ BUGFIXES:
 081 ==> 409038 - Erroneous extraction of date metadata for videos.
 082 ==> 405589 - Date taken metadata for video files (start video not used and difference of time).
 083 ==> 409087 - OpenGL Viewer does not respect the picture rotation.
-084 ==> 
+084 ==> 408881 - Digikam Editor automatically reapplies last edition, even on a different picture.
+085 ==> 
